<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="vm"
            type="com.hc.login.vm.LoginVM" />
        <variable
            name="vFragment"
            type="com.hc.login.LoanFragmentPermission" />
        <import type="android.Manifest"/>

        <import type="com.hc.uicomponent.config.ConfigParams"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:id="@+id/view"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#000000"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            app:layout_constraintBottom_toTopOf="@id/cd"
            app:layout_constraintTop_toBottomOf="@id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintVertical_weight="1"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">
            <ScrollView
                android:id="@+id/sl"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">
                    <TextView
                        android:id="@+id/title"
                        android:layout_marginStart="5dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/container"
                        android:layout_width="wrap_content"
                        android:layout_height="25dp"
                        android:text="Dear Customer,"
                        android:textColor="#ff333333"
                        android:textSize="18sp"
                        />

                    <TextView
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:text="@string/loan_login_skip"
                        android:id="@+id/back"
                        android:textColor="#007335"
                        android:padding="9.5dp"
                        android:onClick="@{()->vm.gotoMainPage(back)}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp" />

                    <LinearLayout
                        android:id="@+id/container"
                        app:layout_constraintTop_toBottomOf="@id/back"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp">

                        <TextView
                            style="@style/PermissionTextStyle"
                            android:layout_marginStart="10dp"
                            android:text="@string/permission_title_desc" />

                        <TextView
                            style="@style/PermissionTitleTextStyle"
                            android:drawableStart="@mipmap/permission_photos"
                            android:text="@string/permission_photos_media_files" />

                        <TextView
                            style="@style/PermissionTextStyle"
                            android:text="@string/permission_photos_text" />

                        <TextView
                            style="@style/PermissionTitleTextStyle"
                            android:layout_marginTop="10dp"
                            android:drawableStart="@mipmap/permission_location"
                            android:text="@string/permission_location" />

                        <TextView
                            style="@style/PermissionTextStyle"
                            android:text="@string/permission_location_text" />

                        <TextView
                            style="@style/PermissionTitleTextStyle"
                            android:drawableStart="@mipmap/permission_phones"
                            android:text="@string/permission_phone" />

                        <TextView
                            style="@style/PermissionTextStyle"
                            android:text="@string/permission_phone_text" />

                        <TextView
                            style="@style/PermissionTitleTextStyle"
                            android:drawableStart="@mipmap/permission_sms"
                            android:text="@string/permission_sms" />

                        <TextView
                            style="@style/PermissionTextStyle"
                            android:text="@string/permission_phone_sms" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cd"
            app:layout_constraintTop_toBottomOf="@id/cardView"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_gravity="bottom"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="5dp"
                android:paddingEnd="5dp">

                <TextView
                    style="@style/PermissionTitleTextStyle"
                    android:drawableStart="@mipmap/permission_contacts"
                    android:text="@string/permission_contacts" />

                <TextView
                    style="@style/PermissionTextStyle"
                    android:text="@string/permission_contacts_text" />

                <TextView
                    url="@{ConfigParams.INSTANCE._PRIVACY_URL}"
                    title="@{@string/permission_privacy_policy}"
                    content="@{@string/permission_terms}"
                    linkText="@{@string/permission_privacy_policy}"
                    linkColor="@{@color/color_link}"
                    style="@style/PermissionTextStyle" />

                <Button
                    android:id="@+id/nextBtn"
                    fragment="@{vFragment}"
                    reqCode="@{vm.PERMISSION_REQ}"
                    isShowRationale="@{false}"
                    rationale="@{@string/permission_open_location_service_tip}"
                    permissionArray="@{vm.permissionArray}"
                    style="@style/ButtonLoginYellowText"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/permission_go" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
